--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ MONGO_URI=mongodb+srv://employee:NPTAOc8msdeZFbyD@cluster0.7th3vvf.mongodb.net/s
 
 JWT_SECRET="asW#A54XD@"
 
-secretKey=123admin123
+secretKey=123User123
 
 # NPTAOc8msdeZFbyD
