--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb://127.0.0.1:27017/spacedb
-# MONGO_URI=mongodb+srv://employee:NPTAOc8msdeZFbyD@cluster0.7th3vvf.mongodb.net/spacedb?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://employee:NPTAOc8msdeZFbyD@cluster0.7th3vvf.mongodb.net/spacedb?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET="asW#A54XD@"
 
