--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 MONGO_URI=mongodb://127.0.0.1:27017/spacedb
-MONGO_URI=mongodb+srv://employee:NPTAOc8msdeZFbyD@cluster0.7th3vvf.mongodb.net/spacedb?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://mitch:yDqFjYHO1e7lLX5D@employee.uondypu.mongodb.net/spacedb?retryWrites=true&w=majority&appName=employee
 
 JWT_SECRET="asW#A54XD@"
 
 secretKey=123User123
 
 # NPTAOc8msdeZFbyD -pass
+# yDqFjYHO1e7lLX5D-newPass
 
 # https://space-core.onrender.com -url
