--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://127.0.0.1:27017/spacedb
+# MONGO_URI=mongodb://127.0.0.1:27017/spacedb
 MONGO_URI=mongodb+srv://mitch:yDqFjYHO1e7lLX5D@employee.uondypu.mongodb.net/spacedb?retryWrites=true&w=majority&appName=employee
 
 JWT_SECRET="asW#A54XD@"
@@ -8,4 +8,4 @@ secretKey=123User123
 # NPTAOc8msdeZFbyD -pass
 # yDqFjYHO1e7lLX5D-newPass
 
-# https://space-core.onrender.com -url
+# https://space-core.onrender.com-url
